deployment/server/ollama-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
        - name: ollama-pvc
          persistentVolumeClaim:
            claimName: ollama-pvc
      containers:
        - name: ollama
          image: 'ollama/ollama:latest'
          ports:
            - name: http
              containerPort: 11434
              protocol: TCP
          resources:
            limits:
              cpu: '6'
              memory: 12Gi
            requests:
              cpu: '6'
              memory: 10Gi
          volumeMounts:
            - name: ollama-pvc
              mountPath: /root/.ollama
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
