deployment/server/ollama-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama-server-route
  labels:
    app: ollama
    app.kubernetes.io/component: ollama
    app.kubernetes.io/instance: ollama
  annotations:
spec:
  to:
    kind: Service
    name: ollama-server-service
    weight: 100
  port:
    targetPort: 11434-tcp
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
